--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-hexagon": "^1.1.3",
+    "react-media": "^1.8.0",
     "react-redux": "^5.0.7",
+    "react-reveal-text": "^0.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
@@ -40,7 +43,10 @@
       "!src/ducks/store/**.js",
       "!src/setupTests.js"
     ],
-    "coverageReporters": ["text", "lcov"],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 75,
