--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.79.1"
+    "semantic-ui-react": "^0.79.1",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
