--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hexagon": "^1.1.3",
+    "react-loadable": "^5.4.0",
     "react-media": "^1.8.0",
     "react-redux": "^5.0.7",
     "react-reveal-text": "^0.1.1",
