--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
     "react": "^16.3.2",
+    "react-animate-height": "^1.0.2",
     "react-dom": "^16.3.2",
     "react-hexagon": "^1.1.3",
     "react-loadable": "^5.4.0",
