--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-animate-height": "^1.0.2",
+    "react-countup": "^3.0.3",
     "react-dom": "^16.3.2",
     "react-hexagon": "^1.1.3",
     "react-loadable": "^5.4.0",
