--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
-    "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.1",
     "styled-components": "^3.2.6"
   },
@@ -47,10 +46,7 @@
       "!src/ducks/store/**.js",
       "!src/setupTests.js"
     ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ],
+    "coverageReporters": ["text", "lcov"],
     "coverageThreshold": {
       "global": {
         "branches": 75,
