--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-reveal-text": "^0.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "recast": "^0.15.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
