--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
-    "react": "^16.3.2",
+    "react": "^16.5.2",
     "react-animate-height": "^1.0.2",
+    "react-app-polyfill": "^0.1.3",
     "react-countup": "^3.0.3",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.5.2",
     "react-hexagon": "^1.1.3",
     "react-loadable": "^5.4.0",
     "react-media": "^1.8.0",
     "react-redux": "^5.0.7",
     "react-reveal-text": "^0.1.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.0.3",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
@@ -62,5 +63,11 @@
         "statements": 75
       }
     }
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
