--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0",
     "react-animate-height": "^1.0.2",
     "react-app-polyfill": "^0.1.3",
     "react-countup": "^3.0.3",
+    "react-dom": "^16.6.0",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -22,6 +22,7 @@
     "styled-components": "^3.4.9"
   },
   "scripts": {
+    "analyze": "node analyze.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -37,7 +38,8 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "gh-pages": "^1.1.0",
-    "redux-mock-store": "^1.5.1"
+    "redux-mock-store": "^1.5.1",
+    "webpack-bundle-analyzer": "^3.0.3"
   },
   "jest": {
     "collectCoverageFrom": [
