--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.0",
+    "react": "^16.8.1",
     "react-app-polyfill": "^0.1.3",
     "react-countup": "^3.0.3",
-    "react-dom": "^16.6.0",
+    "react-dom": "^16.8.1",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.5",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "styled-components": "^4.1.2"
@@ -51,10 +51,7 @@
       "!src/setupTests.js",
       "!src/data/*.js"
     ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ],
+    "coverageReporters": ["text", "lcov"],
     "coverageThreshold": {
       "global": {
         "branches": 75,
@@ -64,10 +61,5 @@
       }
     }
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
