--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-app-polyfill": "^0.1.3",
-    "react-countup": "^3.0.3",
+    "react-countup": "^4.1.1",
     "react-dom": "^16.8.1",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
@@ -51,7 +51,10 @@
       "!src/setupTests.js",
       "!src/data/*.js"
     ],
-    "coverageReporters": ["text", "lcov"],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 75,
@@ -61,5 +64,10 @@
       }
     }
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
