--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.1.5",
+    "react-scripts": "3.0.1",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "^1.0.0",
     "styled-components": "^4.1.2"
   },
   "scripts": {
@@ -36,9 +36,8 @@
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.15.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
     "gh-pages": "^1.1.0",
+    "react-testing-library": "^7.0.0",
     "redux-mock-store": "^1.5.1",
     "webpack-bundle-analyzer": "^3.0.3"
   },
