--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@egoist/snackbar": "^1.2.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-brands-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.19.0",
     "prop-types": "^15.6.2",
-    "react": "^16.8.1",
-    "react-app-polyfill": "^0.1.3",
+    "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.0",
     "react-countup": "^4.1.1",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.6",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -23,7 +24,7 @@
     "styled-components": "^4.1.2"
   },
   "scripts": {
-    "analyze": "node analyze.js",
+    "analyze": "yarn build && source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -39,7 +40,7 @@
     "gh-pages": "^1.1.0",
     "react-testing-library": "^7.0.0",
     "redux-mock-store": "^1.5.1",
-    "webpack-bundle-analyzer": "^3.0.3"
+    "source-map-explorer": "^2.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -68,5 +69,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "resolutions": {
+    "browserslist": "4.6.2",
+    "caniuse-lite": "1.0.30000974"
+  }
 }
