--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "analyze": "yarn build && source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom --watchAll --coverage",
     "test:report": "react-scripts test --env=jsdom --coverage",
