--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.0",
-    "react-countup": "^4.1.1",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
@@ -21,7 +20,8 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.0",
     "redux-saga": "^1.0.0",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.1.2",
+    "use-easing": "^0.0.2"
   },
   "scripts": {
     "analyze": "yarn build && source-map-explorer 'build/static/js/*.js'",
