chore: upgrade redux and router

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "react-app-polyfill": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "3.0.1",
-    "redux": "^4.0.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.0",
+    "react-scripts": "^3.1.2",
+    "redux": "^4.0.4",
     "redux-saga": "^1.0.0",
     "styled-components": "^4.1.2",
     "use-easing": "^0.0.2"
