--- a/package.json
+++ b/package.json
@@ -42,6 +42,18 @@
     "redux-mock-store": "^1.5.1",
     "source-map-explorer": "^2.0.1"
   },
+  "eslintConfig": {
+    "extends": "react-app",
+    "rules": {
+      "react/self-closing-comp": [
+        "error",
+        {
+          "component": true,
+          "html": true
+        }
+      ]
+    }
+  },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.js",
