--- a/package.json
+++ b/package.json
@@ -11,34 +11,35 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.19.0",
     "prop-types": "^15.6.2",
-    "react": "^16.8.6",
+    "react": "^16.13.1",
     "react-app-polyfill": "^1.0.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
     "react-loadable": "^5.4.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "^3.1.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.0",
     "styled-components": "^4.1.2",
-    "use-easing": "^0.0.2"
+    "use-easing": "^0.0.2",
+    "next": "^9.5.0"
   },
   "scripts": {
     "analyze": "node analyze.js",
     "source-map-explore": "yarn build && source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "build": "react-scripts build && cp build/index.html build/404.html",
-    "test": "react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom --watchAll --coverage",
-    "test:report": "react-scripts test --env=jsdom --coverage",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -b master -d build",
-    "production": "yarn test:report && yarn deploy"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.1.0",
+    "@testing-library/react": "^9.4.0",
+    "babel-jest": "^25.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.1.0",
+    "react-test-renderer": "^16.12.0",
     "axios-mock-adapter": "^1.15.0",
-    "gh-pages": "^1.1.0",
     "progress-bar-webpack-plugin": "^1.12.1",
     "react-testing-library": "^7.0.0",
     "redux-mock-store": "^1.5.1",
