--- a/package.json
+++ b/package.json
@@ -4,24 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@egoist/snackbar": "^1.2.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-brands-svg-icons": "^5.6.3",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "axios": "^0.19.0",
-    "prop-types": "^15.6.2",
+    "axios": "^0.19.2",
+    "next": "^9.5.0",
     "react": "^16.13.1",
-    "react-app-polyfill": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.0",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.0.0",
-    "styled-components": "^4.1.2",
-    "use-easing": "^0.0.2",
-    "next": "^9.5.0"
+    "swr": "^0.2.3",
+    "use-easing": "^0.0.2"
   },
   "scripts": {
     "analyze": "node analyze.js",
@@ -38,11 +26,9 @@
     "babel-jest": "^25.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
-    "react-test-renderer": "^16.12.0",
-    "axios-mock-adapter": "^1.15.0",
     "progress-bar-webpack-plugin": "^1.12.1",
+    "react-test-renderer": "^16.12.0",
     "react-testing-library": "^7.0.0",
-    "redux-mock-store": "^1.5.1",
     "source-map-explorer": "^2.0.1",
     "webpack-bundle-analyzer": "^3.5.2"
   },
@@ -85,9 +71,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "resolutions": {
-    "browserslist": "4.6.2",
-    "caniuse-lite": "1.0.30000974"
-  }
+  ]
 }
