chore: add styled-system space package

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@styled-system/space": "^5.1.2",
     "axios": "^0.19.2",
     "next": "^9.5.0",
     "react": "^16.13.1",
