--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.11.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "playroom": "^0.21.2",
