--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@styled-system/space": "^5.1.2",
     "axios": "^0.19.2",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "next": "^9.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
