--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "cache-control",
-          "value": "s-maxage=31536000"
+          "value": "public, max-age=31536000"
         }
       ]
     },
