chore: add blog and contact page dependencies

--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/calendar": "^0.63.0",
     "@styled-system/space": "^5.1.2",
     "axios": "^0.19.2",
+    "cookies": "^0.8.0",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
+    "gray-matter": "^4.0.2",
     "next": "^9.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.2",
+    "remark-highlight.js": "^6.0.0",
+    "remark-html": "^13.0.1",
+    "remark-parse": "^8.0.3",
+    "stegcloak": "^1.1.1",
     "styled-components": "^5.1.1",
     "swr": "^0.2.3",
+    "unified": "^9.2.0",
     "use-easing": "^0.0.2"
   },
   "scripts": {
