chore: add eslint

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "analyze": "node analyze.js",
     "source-map-explore": "yarn build && source-map-explorer 'build/static/js/*.js'",
     "dev": "yarn tokei && next dev",
+    "lint": "eslint src",
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
@@ -42,6 +43,15 @@
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^4.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "playroom": "^0.21.2",
