--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql-tag": "^2.11.0",
     "gray-matter": "^4.0.2",
     "next": "^9.5.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^6.9.2",
