--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "start": "next start",
     "test": "jest --watch",
     "test:ci": "jest --ci",
-    "tokei": "node tokei.js",
-    "playroom:start": "playroom start",
-    "playroom:build": "playroom build"
+    "tokei": "node tokei.js"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.0",
     "@testing-library/react": "^9.4.0",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.0",
@@ -55,11 +56,11 @@
     "eslint-plugin-standard": "^4.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
-    "playroom": "^0.21.2",
     "progress-bar-webpack-plugin": "^1.12.1",
     "react-test-renderer": "^16.12.0",
     "react-testing-library": "^7.0.0",
     "source-map-explorer": "^2.0.1",
+    "typescript": "^4.0.5",
     "webpack-bundle-analyzer": "^3.5.2"
   },
   "eslintConfig": {
