--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "dependencies": {
     "@nivo/calendar": "^0.63.0",
     "@styled-system/space": "^5.1.2",
-    "@types/styled-components": "^5.1.4",
-    "@types/styled-system": "^5.1.10",
     "axios": "^0.19.2",
     "cookies": "^0.8.0",
-    "csstype": "^3.0.5",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "gray-matter": "^4.0.2",
@@ -43,11 +40,16 @@
     "@testing-library/jest-dom": "^5.1.0",
     "@testing-library/react": "^9.4.0",
     "@types/node": "^14.14.7",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.4",
+    "@types/styled-system": "^5.1.10",
+    "@zeit/next-source-maps": "^0.0.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.0",
+    "csstype": "^3.0.5",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-config-standard": "^14.1.1",
@@ -60,7 +62,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "progress-bar-webpack-plugin": "^1.12.1",
-    "react-test-renderer": "^16.12.0",
     "react-testing-library": "^7.0.0",
     "source-map-explorer": "^2.0.1",
     "typescript": "^4.0.5",
@@ -77,11 +78,5 @@
         }
       ]
     }
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
