--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@nivo/calendar": "^0.63.0",
     "@styled-system/space": "^5.1.2",
     "axios": "^0.21.1",
     "cookies": "^0.8.0",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "gray-matter": "^4.0.2",
-    "next": "^10.0.1",
+    "next": "^11.0.1",
     "nprogress": "^0.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^6.9.2",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
@@ -51,6 +50,7 @@
     "babel-plugin-styled-components": "^1.11.0",
     "csstype": "^3.0.5",
     "eslint": "^7.11.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^6.13.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.1",
