--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tokei": "node tokei.js"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^11.0.1",
     "@testing-library/jest-dom": "^5.1.0",
     "@testing-library/react": "^9.4.0",
     "@types/node": "^14.14.7",
@@ -44,6 +45,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.4",
     "@types/styled-system": "^5.1.10",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@zeit/next-source-maps": "^0.0.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.1.0",
@@ -52,31 +54,15 @@
     "eslint": "^7.11.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^6.13.0",
-    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-standard": "^4.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "progress-bar-webpack-plugin": "^1.12.1",
     "react-testing-library": "^7.0.0",
     "source-map-explorer": "^2.0.1",
-    "typescript": "^4.0.5",
-    "webpack-bundle-analyzer": "^3.5.2"
-  },
-  "eslintConfig": {
-    "extends": "react-app",
-    "rules": {
-      "react/self-closing-comp": [
-        "error",
-        {
-          "component": true,
-          "html": true
-        }
-      ]
-    }
+    "typescript": "^4.0.5"
   }
 }
