--- a/package.json
+++ b/package.json
@@ -59,9 +59,13 @@
     "eslint-plugin-promise": "^4.2.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
+    "msw": "^0.35.0",
     "progress-bar-webpack-plugin": "^1.12.1",
     "react-testing-library": "^7.0.0",
     "source-map-explorer": "^2.0.1",
     "typescript": "^4.0.5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
