--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "gray-matter": "^4.0.2",
-    "next": "^12.0.4-canary.9",
+    "next": "^12.0.4",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
