--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "styled-components": "^5.1.1",
     "swr": "^0.3.9",
     "unified": "^9.2.0",
-    "use-easing": "^0.0.2"
+    "use-easing": "0.0.9"
   },
   "scripts": {
     "analyze": "node analyze.js",
