--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "styled-components": "^5.1.1",
     "swr": "^0.3.9",
     "unified": "^9.2.0",
-    "use-easing": "^0.0.2"
+    "use-easing": "0.0.9"
   },
   "scripts": {
     "analyze": "node analyze.js",
@@ -58,9 +58,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "identity-obj-proxy": "^3.0.0",
+    "msw": "^0.35.0",
     "jest": "^27.3.1",
     "progress-bar-webpack-plugin": "^1.12.1",
     "source-map-explorer": "^2.0.1",
     "typescript": "^4.0.5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
