--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "gray-matter": "^4.0.2",
-    "next": "12.0.6",
+    "next": "^12.0.7",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -58,8 +58,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "identity-obj-proxy": "^3.0.0",
-    "msw": "^0.35.0",
     "jest": "^27.3.1",
+    "msw": "^0.35.0",
     "progress-bar-webpack-plugin": "^1.12.1",
     "source-map-explorer": "^2.0.1",
     "typescript": "^4.0.5"
