--- a/package.json
+++ b/package.json
@@ -4,26 +4,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@styled-system/space": "^5.1.2",
-    "axios": "^0.24.0",
-    "graphql": "^15.3.0",
-    "graphql-tag": "^2.11.0",
-    "gray-matter": "^4.0.2",
-    "next": "^12.0.7",
-    "nprogress": "^0.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remark-highlight.js": "^7.0.1",
-    "remark-html": "^15.0.0",
-    "remark-parse": "^10.0.0",
-    "styled-components": "^5.1.1",
-    "swr": "^0.3.9",
-    "unified": "^9.2.0",
+    "@styled-system/space": "5.1.2",
+    "axios": "0.24.0",
+    "graphql": "16.2.0",
+    "graphql-tag": "2.12.6",
+    "next": "12.0.8",
+    "nprogress": "0.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "styled-components": "5.3.3",
+    "swr": "1.1.2",
     "use-easing": "0.0.9"
   },
   "scripts": {
-    "analyze": "node analyze.js",
-    "source-map-explore": "yarn build && source-map-explorer 'build/static/js/*.js'",
+    "bundle": "ANALYZE=true yarn build",
     "dev": "yarn tokei && next dev",
     "lint": "eslint src",
     "build": "next build",
@@ -33,36 +27,28 @@
     "tokei": "node tokei.js"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^11.0.1",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@types/cookies": "^0.7.7",
-    "@types/node": "^14.14.7",
-    "@types/nprogress": "^0.2.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/stegcloak": "^1.0.0",
-    "@types/styled-components": "^5.1.4",
-    "@types/styled-system": "^5.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@zeit/next-source-maps": "^0.0.3",
-    "babel-jest": "^27.3.1",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-styled-components": "^1.11.0",
-    "csstype": "^3.0.5",
-    "eslint": "^7.11.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.3.1",
-    "msw": "^0.35.0",
-    "progress-bar-webpack-plugin": "^1.12.1",
-    "source-map-explorer": "^2.0.1",
-    "typescript": "^4.0.5"
+    "@next/bundle-analyzer": "12.0.8",
+    "@testing-library/jest-dom": "5.15.0",
+    "@testing-library/react": "12.1.2",
+    "@types/node": "17.0.8",
+    "@types/nprogress": "0.2.0",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "@types/styled-components": "5.1.11",
+    "@types/styled-system": "5.1.15",
+    "@typescript-eslint/eslint-plugin": "4.28.5",
+    "csstype": "3.0.10",
+    "eslint": "7.11.0",
+    "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "6.13.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "27.3.1",
+    "msw": "0.36.4",
+    "typescript": "4.5.4"
   },
   "msw": {
     "workerDirectory": "public"
