--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
     "next": "12.0.8",
-    "next-seo": "^4.29.0",
+    "next-seo": "4.29.0",
     "nprogress": "0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
