--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/styled-system": "5.1.15",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/dynamic": "2.0.2",
     "@vanilla-extract/next-plugin": "^2.0.1",
     "csstype": "3.0.10",
     "eslint": "8.7.0",
