--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/dynamic": "2.0.2",
     "@vanilla-extract/next-plugin": "^2.0.1",
+    "@vanilla-extract/sprinkles": "1.3.3",
     "csstype": "3.0.10",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
