--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@styled-system/space": "5.1.2",
     "axios": "0.24.0",
+    "classnames": "^2.3.1",
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
     "next": "12.0.9",
