--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "axios": "0.26.0",
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
+    "gray-matter": "4.0.3",
     "next": "12.1.0",
+    "next-mdx-remote": "3.0.8",
     "next-seo": "4.29.0",
     "nprogress": "0.2.0",
     "react": "17.0.2",
