feat: Render Post with Headings, Paragraphs and Syntax highlight

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
     "gray-matter": "4.0.3",
+    "meilisearch": "0.24.0",
     "next": "12.1.0",
     "next-mdx-remote": "3.0.8",
     "next-seo": "4.29.0",
     "nprogress": "0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-syntax-highlighter": "15.4.5",
     "styled-components": "5.3.3",
     "swr": "1.1.2",
     "use-easing": "0.0.9"
@@ -37,6 +39,7 @@
     "@types/nprogress": "0.2.0",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
+    "@types/react-syntax-highlighter": "13.5.2",
     "@types/styled-components": "5.1.20",
     "@types/styled-system": "5.1.15",
     "@typescript-eslint/eslint-plugin": "5.10.0",
