--- a/meilisearch-db/Cargo.toml
+++ b/meilisearch-db/Cargo.toml
@@ -18,3 +18,5 @@ serde_json = "1.0"
 gray_matter = "0.2.1"
 # Clap cli parser
 clap = {version = "3.0.14", features = ["derive"]}
+# To timestamp publish/update
+chrono = "0.4"
