--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "msw": "0.36.7",
     "typescript": "4.5.4"
   },
+  "resolutions": {
+    "prismjs": "1.27.0"
+  },
   "msw": {
     "workerDirectory": "public"
   }
