--- a/meilisearch-db/Cargo.toml
+++ b/meilisearch-db/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-author = "Joseph Chamochumbi"
+authors = ["Joseph Chamochumbi"]
 edition = "2021"
 name = "meilisearch-db"
 version = "0.1.0"
@@ -20,3 +20,5 @@ gray_matter = "0.2.1"
 clap = {version = "3.0.14", features = ["derive"]}
 # To timestamp publish/update
 chrono = "0.4"
+# Confirm actions
+dialoguer = "0.10.0"
