--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
+    "jsdom-testing-mocks": "1.7.0",
     "msw": "1.1.0",
     "typescript": "4.9.5"
   },
