--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@styled-system/space": "5.1.2",
     "@vercel/analytics": "0.1.11",
     "axios": "0.26.0",
+    "classnames": "2.3.2",
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
     "gray-matter": "4.0.3",
@@ -44,6 +45,7 @@
     "@types/styled-components": "5.1.20",
     "@types/styled-system": "5.1.15",
     "@typescript-eslint/eslint-plugin": "5.10.0",
+    "autoprefixer": "10.4.14",
     "csstype": "3.0.10",
     "eslint": "8.7.0",
     "eslint-config-next": "13.2.4",
@@ -57,6 +59,8 @@
     "jest-environment-jsdom": "29.5.0",
     "jsdom-testing-mocks": "1.7.0",
     "msw": "1.1.0",
+    "postcss": "8.4.22",
+    "tailwindcss": "3.3.1",
     "typescript": "4.9.5"
   },
   "msw": {
