feat: Show language sizes in bytes from GitHub

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci",
-    "tokei": "node tokei.js"
+    "test:ci": "jest --ci"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "13.2.4",
