--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@phosphor-icons/react": "2.0.9",
     "@styled-system/space": "5.1.2",
+    "@supabase/supabase-js": "2.21.0",
     "@vercel/analytics": "1.0.0",
     "axios": "0.26.0",
     "classnames": "2.3.2",
