--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@phosphor-icons/react": "2.0.9",
     "@supabase/supabase-js": "2.21.0",
     "@vercel/analytics": "1.0.0",
-    "axios": "0.26.0",
+    "base64-js": "^1.5.1",
     "classnames": "2.3.2",
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
@@ -41,7 +41,6 @@
     "@types/react-syntax-highlighter": "13.5.2",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "autoprefixer": "10.4.14",
-    "csstype": "3.0.10",
     "eslint": "8.7.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.3.0",
