--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "15.4.5",
     "swr": "2.1.5",
-    "use-easing": "0.0.9"
+    "use-easing": "0.0.9",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "bundle": "ANALYZE=true yarn build",
@@ -29,7 +30,8 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "auto-gen-zod": "yarn ts-to-zod src/lib/posts/types.ts src/lib/posts/parser.ts"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.0.3",
@@ -55,6 +57,7 @@
     "msw": "1.1.0",
     "postcss": "8.4.22",
     "tailwindcss": "3.3.1",
+    "ts-to-zod": "3.5.0",
     "typescript": "5.1.3"
   }
 }
