--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@supabase/supabase-js": "2.21.0",
     "@vercel/analytics": "1.0.0",
     "base64-js": "^1.5.1",
+    "bright": "^0.8.4",
     "classnames": "2.3.2",
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
@@ -18,7 +19,6 @@
     "next-seo": "4.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-syntax-highlighter": "15.4.5",
     "swr": "2.1.5",
     "use-easing": "0.0.9",
     "zod": "^3.22.4"
