--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mdx-js/mdx": "3.0.1",
     "@phosphor-icons/react": "2.0.9",
     "@supabase/supabase-js": "2.21.0",
     "@vercel/analytics": "1.0.0",
