--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
     "gray-matter": "4.0.3",
-    "meilisearch": "0.32.4",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -47,7 +46,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.4",
     "identity-obj-proxy": "3.0.0",
-    "jest": "29.5.0",
+    "jest": "29.7.0",
     "jest-environment-jsdom": "29.5.0",
     "jsdom-testing-mocks": "1.7.0",
     "msw": "1.1.0",
@@ -55,5 +54,6 @@
     "tailwindcss": "3.3.1",
     "ts-to-zod": "3.5.0",
     "typescript": "5.4.5"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
